--- a/NVProject/templates/login.html
+++ b/NVProject/templates/login.html
@@ -22,7 +22,7 @@
             padding: 20px;
             /* Background image with overlay */
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                url('https://i.pinimg.com/1200x/04/27/d5/0427d532f8e43c3895ff15831d8da47a.jpg') no-repeat center center fixed;
+                url('https://plus.unsplash.com/premium_photo-1661849234322-cf07f415f64f?q=80&w=1151&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
             background-size: cover;
         }
 
